<resources>
    <string name="app_name">Milifare</string>
    <string name="add_new_event">New Event</string>
    <string name="enlist">Enlist</string>
    <string name="discharge">Discharge</string>
    <string name="goals">Goals</string>
    <string name="current">Current</string>
    <string name="run">Running</string>
    <string name="situp">Situp</string>
    <string name="pushup">Pushup</string>
    <string name="fill_manual">or fill out manually</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="name">Name</string>
    <string name="settings">Settings</string>
    <string name="info_and_ask"><![CDATA[Info & Ask]]></string>
    <string name="changelog">Changelog</string>
    <string name="pref_changelog_exp">Check new features from this version.</string>
    <string name="ask_to_dev">Ask to Developer</string>
    <string name="pref_ask_exp">Please send us bugs, questions, or your backup data in case of data aggregation errors!</string>
    <string name="ask">Ask</string>
    <string name="email_text">Trainer User Comment</string>
    <string name="open_source_license">Open Source License</string>
    <string name="pref_opens_exp">Licenses of Open Sources Used in App</string>

    <!--Onboarding-->
    <string name="tag_one">One.</string>
    <string name="tag_two">Two.</string>
    <string name="tag_three">Three.</string>
    <string name="tag_four">Four.</string>
    <string name="tag_five">Five.</string>
    <string name="tag_six">Six.</string>
    <string name="intro_page0_title">Welcome.</string>
    <string name="intro_page0_exp">Thank you for installing Milifare, a running, push-up, and sit-up record enhancement assistant for the fitness test of Korean soldiers.</string>
    <string name="intro_page1_title">Grant Permission</string>
    <string name="intro_page1_exp">Please allow location permission to get weather information.</string>
    <string name="intro_page1_btn">Grant Location Permission</string>
    <string name="intro_page1_btn_confirmed">Confirmed</string>
    <string name="intro_page2_title">Soldier Info</string>
    <string name="intro_page2_exp">Please enter your profile picture, name (nickname) and birthday.</string>
    <string name="intro_page3_title">Enlistment date and discharge date</string>
    <string name="intro_page3_exp">Enter enlistment date and discharge date</string>
    <string name="intro_page4_title">Fitness Goal</string>
    <string name="intro_page4_exp">Select fitness goal level.</string>
    <string name="intro_page5_title">Current Level</string>
    <string name="intro_page5_exp">Please enter your currently available running, push-ups, and sit-ups.</string>
    <string name="intro_page6_title">Exam Deadline Reminder</string>
    <string name="intro_page6_exp">Unit: Minute. Select the notifications you want to receive.</string>
    <string name="nlevel">Class %1$d</string>
    <string name="level1">Class 1</string>
    <string name="level2">Class 2</string>
    <string name="level3">Class 3</string>
    <string name="special_level">Special</string>

    <string name="permission_granted_msg">Please grant permission.</string>
    <string name="dateFormat">MMM dd, yyyy</string>
    <string name="dateLongFormat">EEE, MMM dd, yyyy</string>
    <string name="dateAxisFormat">MMM dd</string>
    <string name="err_name_not_filled">Please fill out your name.</string>
    <string name="err_name_and_permission">Please grant permission and fill out your name.</string>
    <string name="comfirm_record">Confirm your record</string>
    <string name="record">Record..</string>
    <string name="saved">Saved.</string>
    <string name="todays_record">Today\'s record</string>
    <string name="average_record">Average record</string>
    <string name="failed">Failed</string>
    <string name="stop">Stop</string>
    <string name="humid_format">Humidity : %d%%</string>
    <string name="timer">Timer</string>
    <string name="running_noti_title">Running..</string>
    <string name="dev_milifare">TEAM MILIFARE</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_title">To improve your stamina today</string>
    <string name="reminder_msg">Yesterday you did running: %1$s, %2$s of push-ups and %3$s of sit-ups.</string>
    <string name="reminder_msg_none">Yesterday you didn\'t running, push-ups and sit-ups.</string>
    <string name="reminder_msg_run_push">Yesterday you did running: %1$s, and %2$s of push-ups.</string>
    <string name="reminder_msg_run_sit">Yesterday you did running: %1$s, and %2$s of sit-ups.</string>
    <string name="reminder_msg_push_sit">Yesterday you did %1$s of push-ups and %2$s of sit-ups.</string>
    <string name="reminder_msg_run">Yesterday you did running: %1$s.</string>
    <string name="reminder_msg_sit">Yesterday you did %1$s of sit-ups.</string>
    <string name="reminder_msg_push">Yesterday you did %1$s of push-ups.</string>
    <string name="touch_to_change_pic">Touch to\nchange picture</string>
    <string name="no_datas">No chart data available.</string>
    <string name="edit">수정</string>
</resources>