<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="activity"
            type="net.ienlab.trainer.activity.DataInputActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/usual_margin"
        android:fitsSystemWindows="true">

        <RadioGroup
            android:id="@+id/group_radio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_run"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/run" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_situp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/situp" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_pushup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pushup" />

        </RadioGroup>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="yyyy.MM.dd"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_radio" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="hh:mm"
            android:layout_marginStart="@dimen/usual_margin"
            app:layout_constraintStart_toEndOf="@id/tv_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/group_radio" />

        <EditText
            android:id="@+id/et_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="count"
            android:inputType="numberDecimal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="save"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_count" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
