<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="fragment"
            type="net.ienlab.trainer.fragment.OnboardingFragment4" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        app:cardCornerRadius="@dimen/layout_radius"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tag_four"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:fontFamily="@font/pretendard_black"
                android:layout_margin="@dimen/usual_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_title" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.3" />

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/ic_run"
                android:rotation="0"
                android:alpha="0.5"
                app:tint="@color/white"
                app:layout_constraintStart_toEndOf="@id/guide"
                app:layout_constraintBottom_toTopOf="@id/guide2" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/intro_page4_title"
                android:textSize="@dimen/onboarding_text_size"
                android:textColor="@color/white"
                android:fontFamily="@font/pretendard_black"
                android:layout_margin="@dimen/usual_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tv_content" />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/intro_page4_exp"
                android:textColor="@color/white"
                android:fontFamily="@font/pretendard"
                android:layout_margin="@dimen/usual_margin"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/btn_action_bg" />

            <LinearLayout
                android:id="@+id/btn_action_bg"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#55FFFFFF"
                android:padding="@dimen/usual_margin"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" >

                <com.google.android.material.slider.Slider
                    android:id="@+id/lv_slider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:valueFrom="0"
                    android:valueTo="3"
                    android:stepSize="1"
                    app:tickVisible="true"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>